RE-267 Fixed Typo in Modify Constants